--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Pranjal Roy">
-    <meta>
-    <title>Video Player</title>
-    <link rel="icon"
-        href="https://images.pexels.com/photos/66134/pexels-photo-66134.jpeg?_gl=1*ttct6t*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1Mjc2MDIkbzYkZzEkdDE3NTk1Mjc2MzUkajI3JGwwJGgw"
-        type="image/png">
+    <!-- Open Graph Meta Tags for WhatsApp Preview -->
+<meta property="og:title" content="Video Player">
+<meta property="og:description" content="Watch and explore videos with style.">
+<meta property="og:image" content="https://images.pexels.com/photos/827209/pexels-photo-827209.jpeg?_gl=1*bfessf*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1Mjc2MDIkbzYkZzEkdDE3NTk1Mjg0NTIkajQ2JGwwJGgw">
+<meta property="og:url" content="https://thankful-sky-0966c9d00.1.azurestaticapps.net">
+<meta property="og:type" content="website">
+    
 </head>
 
 <body>
