just tried some css

--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
     <link rel="icon"
         href="https://images.pexels.com/photos/66134/pexels-photo-66134.jpeg?_gl=1*ttct6t*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1Mjc2MDIkbzYkZzEkdDE3NTk1Mjc2MzUkajI3JGwwJGgw"
         type="image/png">
+        <link rel="stylesheet" href="indexx.css">
 </head>
 
 <body>
     <h1><u>Welcome to video player</u></h1>
-    <a href="coding.html"><span>
-            <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?_gl=1*14s4jw4*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTgzNDYkajUwJGwwJGgw"
-                alt="Coding" width="500">
-            <p><b>Coding</b></p>
+    <a href="coding.html" ><span>
+            <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?_gl=1*14s4jw4*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTgzNDYkajUwJGwwJGgw" 
+                alt="Coding" width="450">
+            <p class="img"><b>Coding</b></p>
         </span></a>
-    <a href="gaming.html"><span>
-            <img src="https://images.pexels.com/photos/21067/pexels-photo.jpg?_gl=1*d9f1d2*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTg1MDQkajQzJGwwJGgw"
-                alt="Gaming" width="500">
+    <a href="gaming.html" ><span>
+            <img src="https://images.pexels.com/photos/21067/pexels-photo.jpg?_gl=1*d9f1d2*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTg1MDQkajQzJGwwJGgw" 
+                alt="Gaming" width="450">
             <p><b>Gaming</b></p>
         </span></a>
-    <a href="music.html"><span>
-            <img src="https://images.pexels.com/photos/164829/pexels-photo-164829.jpeg?_gl=1*13gfwc5*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTg2MzEkajMxJGwwJGgw"
-                alt="Music" width="500">
+    <a href="music.html" ><span>
+            <img src="https://images.pexels.com/photos/164829/pexels-photo-164829.jpeg?_gl=1*13gfwc5*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTg2MzEkajMxJGwwJGgw" 
+                alt="Music" width="450">
             <p><b>Music</b></p>
         </span></a>
     <a href="nature.html"><span>
-            <img src="https://images.pexels.com/photos/1002703/pexels-photo-1002703.jpeg?_gl=1*5g2qmy*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTk1ODckajQ0JGwwJGgw"
-                alt="Nature" width="500">
+            <img src="https://images.pexels.com/photos/1002703/pexels-photo-1002703.jpeg?_gl=1*5g2qmy*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1MTgzMzYkbzQkZzEkdDE3NTk1MTk1ODckajQ0JGwwJGgw" 
+                alt="Nature" width="450">
             <p><b>Nature</b></p>
         </span></a>
 
