--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         href="https://images.pexels.com/photos/66134/pexels-photo-66134.jpeg?_gl=1*ttct6t*_ga*OTUwMzEyMzkyLjE3NTg0NTY4NTc.*_ga_8JE65Q40S6*czE3NTk1Mjc2MDIkbzYkZzEkdDE3NTk1Mjc2MzUkajI3JGwwJGgw"
         type="image/png">
         <link rel="stylesheet" href="indexx.css">
+        <style>
+            p{
+                width: 450px;
+                background-color: aqua;
+            }
+        </style>
 </head>
 
 <body>
